src/components/Followers/FollowerDetails/FollowerDetails.css
.user-card {
  display: flex;
  justify-content: space-between;
  padding: 10px 20px;
  box-shadow: 0px 10px 15px -2px rgba(0,0,0,0.06);
}

.user-card * {
  margin: 0;
}

.user-card h5 {
  margin-left: 5%;
}

.profile-link a {
  position: relative;
  z-index: 2;
  text-decoration: none;
  transition: all .1s linear;
}

.profile-link a:visited {
  color: black;
}

.profile-link a:hover {
  color: white;
}

.profile-link::after {
  position: absolute;
  content: '';
  width: 0;
  height: 39px;
  transform: translate(0px, -39.5px);
  background: linear-gradient(90deg, rgba(237,166,146,1) 0%, rgba(255,201,163,1) 100%);
  transition: all .2s linear;
  z-index: -1;
}

.main-link::after {
  position: absolute;
  content: '';
  width: 0;
  height: 39px;
  transform: translate(0px, -39.5px);
  background: linear-gradient(90deg, rgba(237,166,146,1) 0%, rgba(255,201,163,1) 100%);
  transition: all .2s linear;
  z-index: -1;
}

.main-link:hover::after {
  width: 50%;
  color: white;
}

.profile-link:hover {
  color: white;
}

.profile-link:hover::after {
  width: 100%;
  color: white;
}

